--- a/task.css
+++ b/task.css
@@ -200,20 +200,19 @@ p {
 }
 .advisorx1 {
     display: flex;
-    align-content: center;
+    justify-content: center;
     padding-top: 13px;
-    padding-left: 170px;
+    gap: 20px;
 }
 .page4_heading {
     padding-top: 0px;
 }
 .card1 {
     border-radius: 12px;
-    width: 320;
-    height: 420;
-    top: 188px;
-    left: 181px;
-    padding-left: 100px;
+    background-color: #FFFFFF;
+    padding-left: 8px;
+    width: auto;
+    display: grid;
 }
 .card1_title {
     margin-top: 10px;
@@ -267,8 +266,9 @@ p {
     height: 420;
     top: 188px;
     left: 181px;
+    border-radius: 12px;
     background-color: #FFFFFF;
-    padding-left: 30px;
+    padding-left: 8px;
 }
 .card2_title {
     margin-top: 10px;
@@ -322,8 +322,9 @@ p {
     height: 420;
     background-color: #FFFFFF;
     top: 188px;
+    border-radius: 12px;
     left: 181px;
-    padding-left: 34px;
+    padding-left: 8px;
 }
 .card3_title {
     margin-top: 10px;
